add /user/follow/{id} DELETE method for unfollowing users
