# cmd/app/routes.go
@@ -24,10 +24,15 @@ func (app *Config) NewRouter() *echo.Echo {
 
 	e.POST("/v1/tokens/refresh", app.BaseHandler.RefreshTokens)
 
-	//Social relations
+	// Search
 	e.GET("/v1/search", app.BaseHandler.Search, app.AuthUserMiddleware())
-	e.POST("/v1/follow", app.BaseHandler.Follow, app.AuthUserMiddleware())
-	e.POST("/v1/block", app.BaseHandler.Block, app.AuthUserMiddleware())
+
+	// Relations
+	e.POST("/v1/user/follow/:id", app.BaseHandler.Follow, app.AuthUserMiddleware())
+	e.DELETE("/v1/user/follow/:id", app.BaseHandler.Unfollow, app.AuthUserMiddleware())
+	e.POST("/v1/user/block/:id", app.BaseHandler.Block, app.AuthUserMiddleware())
+	//e.DELETE("/v1/user/block/:id", app.BaseHandler.Unblock, app.AuthUserMiddleware())
+	//e.DELETE("/v1/user/chat/:id", app.BaseHandler.DeleteChat, app.AuthUserMiddleware())
 
 	//Chat
 	e.GET("/ws/chat", app.BaseHandler.Chat, app.AuthUserMiddleware())
